# gradslam

./: .flake8  .gitignore  .readthedocs.yml  .toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ScannetDataset.py  build_package.sh  cfgnode.py  geometry_utils.py  path.bash.inc  pyproject.toml  requirements.txt  setup.py  setup_dev_env.sh  voxel.py
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  questions-help-support.md
docs/: conf.py  index.rst  requirements.txt  tutorials.rst
docs/modules/: config.rst  datasets.rst  geometry.rst  metrics.rst  odometry.rst  slam.rst  structures.rst  utils.rst
docs/notes/: installation.rst  introduction.rst
docs/tutorials/: pointclouds_tutorial.ipynb
examples/: gs_pointfusion.py  icpslam.py  icpslam_scannet.py  pointfusion.ipynb  pointfusion.py  pointfusion_example.py  pointfusion_icl.py  pointfusion_scannet.py  pointfusion_tum.py  run_pointfusion.py
examples/dataconfigs/: azure.yaml  icl.yaml  replica.yaml
examples/tutorials/: pointclouds_tutorial.ipynb  pointfusion_tutorial.ipynb  rgbdimages_tutorial.ipynb
gradslam/: __init__.py  version.py
gradslam/config/: __init__.py  cfgnode.py
gradslam/datasets/: __init__.py  azure.py  basedataset.py  dataconfig.py  datautils.py  icl.py  replica.py  scannet.py  tum.py  tumutils.py
gradslam/geometry/: __init__.py  geometry_utils.py  geometryutils.py  (+2 more)
slamaware2d/: __init__.py
tests/: cfg_new_allowed_bad.yaml  common.py  samplecfg.py  samplecfg_dict.py  test_cfgnode.py
(+63 files in other folders)
